--- a/0x00-html_advanced/2-index.html
+++ b/0x00-html_advanced/2-index.html
@@ -1,12 +1,12 @@
 <!Doctype html>
 <html lang="en" dir="ltr">
 	<head>
-		<meta charset ="UTF-8">
+		<meta charset ="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" viewport-fit="cover">
+        <title>Homepage - Techium</title>
         <meta name="description" content="Techium is a digital agency">
 		<link rel="icon" type="image/x-icon" href="./favicon.ico">
-		<link rel="icon" type="image/png" href="./favicon-32x32.png">
-        <title>Homepage - Techium</title>
+		<link rel="icon" type="image/png" href="./favicon-32x32.png">       
 	</head>
 	<body>
 	</body>
