--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -19,12 +19,12 @@
       
             </div>
         </header>
-        <br>
+       <br>
         <!-- Main -->
         <main>
             <h1> Homepage </h1>
             <br>
-            <!-- Hero section --->       
+            <!-- Hero section -->       
             <section>
                 <div>
                     <h2> We help you build your brand! </h2>
