--- a/0x00-html_advanced/20-index.html
+++ b/0x00-html_advanced/20-index.html
@@ -18,8 +18,8 @@
                         <span> Techium </span>     
                     </a>
                 </div>
-                <nav>
-                    <a href="/">Home<a/>
+                <nav>                
+                    <a href="/">Home</a>
                     <a href="#services">Services</a>
                     <a href="#works">Works</a>
                     <a href="#about">About</a>
