Horrizontal rule correction

--- a/0x00-html_advanced/28-styleguide.html
+++ b/0x00-html_advanced/28-styleguide.html
@@ -61,7 +61,7 @@
                 </dl>
             </div>
         </section>
-        <hr>
+        <!-- Horizontal rule -->
         <section>
             <header>
                 <h2>Horizontal rule</h2>
