--- a/0x00-html_advanced/5-index.html
+++ b/0x00-html_advanced/5-index.html
@@ -1,43 +1,51 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
-	<head>
-		<meta charset ="UTF-8">
+    <head>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" viewport-fit="cover">
         <title>Homepage - Techium</title>
         <meta name="description" content="Techium is a digital agency">
-		<link rel="icon" type="image/x-icon" href="./favicon.ico">
-		<link rel="icon" type="image/png" href="./favicon-32x32.png">        
-	</head>
-	<body>
+        <link rel="icon" type="image/x-icon" href="./favicon.ico">
+        <link rel="icon" type="image/png" href="./favicon-32x32.png">        
+    </head>
+    <body>
         <header>
-        Header
+            Header
         </header>
+
         <main>
             <section>
-                Hero section
-            </section>            
+                <h1>Hero section</h1>
+            </section>
+
             <section>
-                Service section
-            </section>           
+                <h2>Services section</h2>
+            </section>
+
             <section>
-                Works section
-            </section>            
+                <h2>Works section</h2>
+            </section>
+
             <section>
-                About section
-            </section>             
+                <h2>About section</h2>
+            </section>
+
             <section>
-                Latest news section
-            </section>            
+                <h2>Latest news section</h2>
+            </section>
+
             <section>
-                Testimonials section
-            </section>    
+                <h2>Testimonials section</h2>
+            </section>
+
             <section>
-                Contact section
-            </section>            
+                <h2>Contact section</h2>
+            </section>
         </main>
+
         <footer>
-        Footer
+            Footer
         </footer>
-	</body>
+    </body>
 </html>
 
