--- a/0x00-html_advanced/5-index.html
+++ b/0x00-html_advanced/5-index.html
@@ -1,51 +1,46 @@
-<!DOCTYPE html>
+<!Doctype html>
 <html lang="en" dir="ltr">
-    <head>
-        <meta charset="UTF-8">
+	<head>
+		<meta charset ="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" viewport-fit="cover">
-        <title>Homepage - Techium</title>
+         <title>Homepage - Techium</title>
         <meta name="description" content="Techium is a digital agency">
-        <link rel="icon" type="image/x-icon" href="./favicon.ico">
-        <link rel="icon" type="image/png" href="./favicon-32x32.png">        
-    </head>
-    <body>
+		<link rel="icon" type="image/x-icon" href="./favicon.ico">
+		<link rel="icon" type="image/png" href="./favicon-32x32.png">        
+	</head>
+	<body>
         <header>
-            Header
+        Header
         </header>
 
         <main>
             <section>
-                <h1>Hero section</h1>
+                Hero section
             </section>
-
             <section>
-                <h2>Services section</h2>
+                Services section
             </section>
-
             <section>
-                <h2>Works section</h2>
+                Works section
             </section>
-
             <section>
-                <h2>About section</h2>
+                About section
             </section>
-
             <section>
-                <h2>Latest news section</h2>
+                Latest news section
             </section>
-
             <section>
-                <h2>Testimonials section</h2>
+                Testimonials section 
             </section>
-
             <section>
-                <h2>Contact section</h2>
+                Contact section
             </section>
         </main>
 
         <footer>
-            Footer
+        Footer
         </footer>
-    </body>
+
+	</body>
 </html>
 
