Section: Article content area numbering

--- a/0x00-html_advanced/6-index.html
+++ b/0x00-html_advanced/6-index.html
@@ -23,13 +23,13 @@
             <section>
                 Works section
                 <article>
-                    Work #
+                    Work 1
                 </article>
                 <article>
-                    Work #
+                    Work 2
                 </article>
                 <article>
-                    Work #
+                    Work 3
                 </article>
             </section>
             <section>
@@ -38,25 +38,25 @@
             <section>
                 Latest news section
                 <article>
-                    Article #
+                    Article 1
                 </article>
                 <article>
-                    Article #
+                    Article 2
                 </article>
                 <article>
-                    Article #
+                    Article 3
                 </article>
             </section>
             <section>
                 Testimonials section 
                  <article>
-                    Testimonial #
+                    Testimonial 1
                 </article>
                 <article>
-                    Testimonial #
+                    Testimonial 2
                 </article>
                 <article>
-                    Testimonial #
+                    Testimonial 3
                 </article>
             </section>
             <section>
