--- a/0x00-html_advanced/10-index.html
+++ b/0x00-html_advanced/10-index.html
@@ -72,13 +72,13 @@
             <section>                
                 <h2> Testimonials </h2>
                 <article>
-                    Testimonial #
+                    Testimonial 1
                 </article>
                   <article>
-                    Testionial #
+                    Testionial 2
                 </article>
                   <article>
-                    Testimonial #
+                    Testimonial 3
                </article>
                         
             </section>      
