--- a/0x00-html_advanced/10-index.html
+++ b/0x00-html_advanced/10-index.html
@@ -57,7 +57,7 @@
             <section>
                 <h2> Latest news </h2>
                 <article>
-                    <h3>Who are we</h3>
+                    <h3>Hoc loco tenere se Triarius non potuit.</h3>
                 </article>
 
                 <article>
