--- a/0x00-html_advanced/contact.html
+++ b/0x00-html_advanced/contact.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset ="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0", viewport-fit="cover">
-        <title>Contact - Techium</title>
+        <title>HContact - Techium</title>
         <meta name="description" content="Techium is a digital agency">
 		<link rel="icon" type="image/x-icon" href="./favicon.ico">
 		<link rel="icon" type="image/png" href="./favicon-32x32.png">        
@@ -15,7 +15,7 @@
             <div>
                 <div>
                     <a href="/">
-                        <span> Techium </span>     
+                        <span> Techium </span>
                     </a>
                 </div>
                 <nav>
