--- a/0x03-responsive_design/03-index.html
+++ b/0x03-responsive_design/03-index.html
@@ -177,7 +177,14 @@
           <div class="section-body">
             <div class="row">
               <div class="col-1-2">
-                <img src="images/pic-about-01.jpg" alt="" width="460" height="460">
+                <img
+                   sizes="(max-width: 1200px) 100vw, 1200px"
+                    srcset="
+                        pic-about-01_czn7le_c_scale,w_380.jpg 380w,
+                        pic-about-01_czn7le_c_scale,w_877.jpg 877w,
+                        pic-about-01_czn7le_c_scale,w_1200.jpg 1200w"
+                    src="pic-about-01_czn7le_c_scale,w_1200.jpg"
+                    alt="">
               </div>
               <div class="col-1-2">
                 <h3>Who are we</h3>
@@ -205,7 +212,14 @@
               <li class="col-1-3">
                 <article class="card-blog">
                   <div>
-                    <img src="images/pic-article-01.jpg" alt="" width="305" height="305">
+                    <img
+                        sizes="(max-width: 1200px) 100vw, 1200px"
+                        srcset="
+                            pic-article-01_fnov2e_c_scale,w_380.jpg 380w,
+                            pic-article-01_fnov2e_c_scale,w_846.jpg 846w,
+                            pic-article-01_fnov2e_c_scale,w_1200.jpg 1200w"
+                        src="pic-article-01_fnov2e_c_scale,w_1200.jpg"
+                        alt="">
                   </div>
                   <p class="card-category">Career</p>
                   <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
@@ -216,7 +230,14 @@
               <li class="col-1-3">
                 <article class="card-blog">
                   <div>
-                    <img src="images/pic-article-02.jpg" alt="" width="305" height="305">
+                    <img
+                        sizes="(max-width: 1200px) 100vw, 1200px"
+                        srcset="
+                            pic-article-02_ust2oc_c_scale,w_380.jpg 380w,
+                            pic-article-02_ust2oc_c_scale,w_856.jpg 856w,
+                            pic-article-02_ust2oc_c_scale,w_1200.jpg 1200w"
+                        src="pic-article-02_ust2oc_c_scale,w_1200.jpg"
+                        alt="">
                   </div>
                   <p class="card-category">Digital Life</p>
                   <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
@@ -227,7 +248,14 @@
               <li class="col-1-3">
                 <article class="card-blog">
                   <div>
-                    <img src="images/pic-article-03.jpg" alt="" width="305" height="305">
+                    <img
+                        sizes="(max-width: 1200px) 100vw, 1200px"
+                        srcset="
+                            pic-article-03_xfhexy_c_scale,w_380.jpg 380w,
+                            pic-article-03_xfhexy_c_scale,w_854.jpg 854w,
+                            pic-article-03_xfhexy_c_scale,w_1200.jpg 1200w"
+                        src="pic-article-03_xfhexy_c_scale,w_1200.jpg"
+                        alt="">
                   </div>
                   <p class="card-category">Social</p>
                   <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
